[package]
name = "rlox"
version = "0.1.0"
authors = ["rindy1123 <genryusinbaou@gmail.com>"]
edition = "2018"
default-run = "rlox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ast-generator"
path = "src/tools/generate_ast/main.rs"

[dependencies]
substring = "1.4.5"
